tests/errors/string_plus_int.sbr
let main = () => {
  let str = "hello" + 5;
  printString(str);
}

export main;